fix column break in services block

--- a/themes/bootscore-child-main/theme_components/scss/blocks/ce-services.scss
+++ b/themes/bootscore-child-main/theme_components/scss/blocks/ce-services.scss
@@ -58,7 +58,10 @@
     .ce-slide-funnels-content-container {
         padding: 1em;
         columns: 2;
-    
+        
+        div {
+            break-inside: avoid-column;
+        }
     }
 }
 
